# Direct2DSample

./: .gitignore  README.md
HLSL着色器/: PathMask.hlsl  WindowMain.cpp
HLSL着色器2/HLSL/: HLSL.sln  HLSL.vcxproj  HLSL.vcxproj.filters  PixelShader.hlsl
HLSL着色器3/: PixelShader.cso  ReadMe.md  WindowMain.cpp  WindowMain.h
几何图形组/: WindowMain.cpp  WindowMain.h
图像/: WindowMain.cpp  WindowMain.h
图层/: CMakeLists.txt  WindowMain.cpp  main.cpp
基于Layered样式的透明窗口/: CMakeLists.txt  main.cpp
基于模糊API的透明窗口/: CMakeLists.txt  main.cpp
无重定向表面的透明窗口/: main.cpp  main_bak.cpp
渐变色/: WindowMain.cpp
绘制基本几何图形/: WindowMain.cpp  WindowMain.h
路径擦除/: WindowMain.cpp
面向对象使用Direct2D/: WindowMain.cpp
